# congential-system

./: CMakeLists.txt  README.md  main.cpp
include/: seq.hpp
src/: main.cpp  seq.cpp
test/: CMakeLists.txt  util_test.cpp
